--- a/css/website.css
+++ b/css/website.css
@@ -237,11 +237,17 @@
 
     .resume {
         font-family: 'Roboto Condensed', sans-serif;
-        font-size: 1.5vw;
-        line-height: 125%;
+        font-size: 1.55vw;
+        line-height: 115%;
+        float: left;
+        margin: 1vw;
         color: white;
+        clear: left;
         list-style: none;
         text-decoration: none;
+        background-color: #424242;
+        padding: 1vw;
+        border-radius: 0.5vw;
     }
 
     .researchList {
